--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Khankisiyevravan.github.io/nf_education_front",
+  "homepage": "http://Khankisiyevravan.github.io/",
   "name": "nfeducation",
   "version": "0.1.0",
   "private": true,
