--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.2",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
