--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "10.4.5",
     "axios": "^1.4.0",
+    "bootstrap": "^5.2.0-beta1",
     "i18next": "^23.3.0",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.2.1",
@@ -19,6 +21,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-scroll-trigger": "^0.6.14",
+    "react-select": "^5.7.7",
     "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
